--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "midtrans/midtrans-php": "^2.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
